@@ -1678,6 +1678,7 @@ gtk_icon_view_item_activated
 gtk_icon_view_new
 gtk_icon_view_new_with_model
 gtk_icon_view_path_is_selected
+gtk_icon_view_scroll_to_path
 gtk_icon_view_select_all
 gtk_icon_view_selected_foreach
 gtk_icon_view_select_path
